V0.9.1 Devel
=============
2003-08-11 DP - Use compiled HTML help file for Help on windows.
2003-08-11 AP - Added "Change column" in table property
				Corrected SQL generation for table property
				Select current item if right click on tree item
				Added win32 version resource
				Corrected missing quoting for FK
2003-08-08 AP - Allow tables without columns for 7.4
				Support of several new 7.4 features
2003-08-08 DP - Added missing helpfile images to Win32 Installer.
2003-08-07 AP - help system cleanups, support of CHM help for win32
				added missing comment in domain property
2003-08-06 DP - Bumped version number.