@@ -1,5 +1,7 @@
 V0.9.1 Devel
 =============
+2003-08-15 DP - Shorten minimum lenght of rule definition to allow 'NOTHING'
+2003-08-15 DP - Add DROP SQL for rule definitions.
 2003-08-11 DP - Use compiled HTML help file for Help on windows.
 2003-08-11 AP - Added "Change column" in table property
 				Corrected SQL generation for table property
